use spring cloud discovery client
Signed-off-by: Pablo Carle <pablo.carle@broadcom.com>